--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,14 +8,16 @@
         {% block title %}Bienvenue sur ForumLearning{% endblock %}
     </title>
         {% block stylesheets %}
-            <link rel="stylesheet" href="{{ asset('/assets/css/style.css') }}">
+        <link rel="icon" type="img/ico" href="{{ asset('favicon.ico') }}">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link rel="stylesheet" href="{{ asset('/assets/css/style.css') }}">
         {% endblock %}
 
         
     </head>
     <body>
         {% block body %}
-        
+
         {% endblock %}
         {% block javascripts %}
             <script src="{{ asset('/assets/js/jquery-3.5.1.min.js') }}"></script>
