--- a/templates/topics/index.html.twig
+++ b/templates/topics/index.html.twig
@@ -44,8 +44,13 @@
                     {% endif %}
                 </a></td>
                 <td>
-                    <a href="{{ path('topics_show', {'id': topic.id}) }}">show</a>
-                    <a href="{{ path('topics_edit', {'id': topic.id}) }}">edit</a>
+                    <a href="{{ path('topics_show', {'id': topic.id}) }}">{{editLimit[topic.id]}}</a>
+                    {% if is_granted('ROLE_ADMIN') %}
+                    <a href="{{ path('topics_edit', {'id': topic.id}) }}" >adm</a>
+                    {% elseif (topic.users == app.user) and (editLimit[topic.id] == 1) %}
+                    <a href="{{ path('topics_edit', {'id': topic.id}) }}" >user</a>
+                    {% else %}
+                    {% endif %}
                 </td>
             </tr>
         {% else %}
