front-end: header and little details

--- a/public/assets/scss/_variables.scss
+++ b/public/assets/scss/_variables.scss
@@ -5,6 +5,7 @@ $cian: #1EC1B6;
 $gray: #818181;
 $dark-blue: #1E3E4E;
 $light-gray: #E1E1E1;
+$very-light-gray: #f8f8f8;
 $light-blue: #E8F7FF;
 
 $primary: $violet;
