--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -11882,8 +11882,10 @@ a.text-dark:hover, a.text-dark:focus {
 /* Styles */
 body {
   font-family: "Poppins", sans-serif;
+  background-color: #f8f8f8;
 }
 
+/* Header */
 #main-header {
   -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
           box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
@@ -11908,12 +11910,92 @@ body {
   color: #6C63FF;
 }
 
+#main-header nav li a i {
+  font-size: 1.45rem;
+}
+
 #main-header nav li.active a {
   font-weight: 500;
   color: #6C63FF;
 }
 
 #search-input {
-  width: 330px;
+  width: 298px;
+}
+
+@media screen and (min-width: 576px) {
+  #search-input {
+    width: 345px;
+  }
+}
+
+/* Ripple effect on btn */
+.btn:not(.btn-search) {
+  position: relative;
+  overflow: hidden;
+  border: none;
+  border-radius: 2px;
+  padding: 12px 18px;
+  font-size: 16px;
+  text-transform: uppercase;
+  cursor: pointer;
+  -webkit-box-shadow: 0 0 4px #999;
+          box-shadow: 0 0 4px #999;
+  outline: none;
+  display: inline-block;
+  text-align: center;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-family: sans-serif;
+  color: white;
+  outline: none;
+}
+
+.btn:not(.btn-search):after {
+  display: none;
+  content: "";
+  position: absolute;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.25);
+  width: 100px;
+  height: 100px;
+  margin-top: -50px;
+  margin-left: -50px;
+  /* Center the ripple */
+  top: 50%;
+  left: 50%;
+  -webkit-animation: ripple 1s;
+          animation: ripple 1s;
+  opacity: 0;
+}
+
+.btn:not(.btn-search):focus:not(:active)::after {
+  display: block;
+}
+
+@-webkit-keyframes ripple {
+  from {
+    opacity: 1;
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  to {
+    opacity: 0;
+    -webkit-transform: scale(10);
+            transform: scale(10);
+  }
+}
+
+@keyframes ripple {
+  from {
+    opacity: 1;
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  to {
+    opacity: 0;
+    -webkit-transform: scale(10);
+            transform: scale(10);
+  }
 }
 /*# sourceMappingURL=style.css.map */
