--- a/templates/topics/index.html.twig
+++ b/templates/topics/index.html.twig
@@ -1,8 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Topics index{% endblock %}
+{% block title %}ForumLearning - Liste des topics{% endblock %}
 
 {% block body %}
+{% include 'main/header.html.twig' %}
+
+<div class="container body-gray">
+
+</div>
     <h1>Topics index</h1>
 
     <table class="table">
