--- a/public/assets/scss/style.scss
+++ b/public/assets/scss/style.scss
@@ -7,6 +7,13 @@
 body {
     font-family: $font-content;
     background-color: $very-light-gray;
+    color: $dark-blue;
+    a {
+        &:hover, &:focus {
+            color: darken($violet, 7%);
+            text-decoration: none;
+        }
+    }
 }
 
 
@@ -41,6 +48,10 @@ body {
 
 #search-input {
     width: 298px;
+}
+
+.btn-search {
+    padding: 8px 10px;
 }
 
 @media screen and (min-width: 576px){
@@ -100,6 +111,10 @@ body {
     }
   }
 
-  @media screen and (min-width: 996px) AND (max-width: 1033px){
+  .blue {
+      color: $cian;
+  }
 
+  .violet {
+      color: $violet;
   }
