--- a/templates/main/header.html.twig
+++ b/templates/main/header.html.twig
@@ -28,4 +28,25 @@
           </nav>
     </div>
 </header>
+
+<div class="container">
+    <div class="row">
+        <div class="col-12">
+            {# lire et afficher tous les messages Flash #}
+            {% for label, messages in app.flashes %}
+            {% for message in messages %}
+
+                {# utilisation des classes de Bootstrap #}
+                <div class="alert alert-{{ label }} alert-dismissible fade show mt-2" role="alert" id="flash-message">
+                    {{ message }}
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+
+            {% endfor %}
+            {% endfor %}
+        </div>
+    </div>
+</div>
 {% endblock %}
