--- a/templates/topics/new.html.twig
+++ b/templates/topics/new.html.twig
@@ -1,11 +1,19 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Topics{% endblock %}
+{% block title %}Créer un nouveau Topic{% endblock %}
 
 {% block body %}
-    <h1>Create new Topics</h1>
+    {% include 'main/header.html.twig' %}
+    <div class="container">
+        <div class="row">
+            <div class="col-12 text-center">
+                <h1>Créer un nouveau topic</h1>
+            </div>
+        </div>
+    </div>
+    
 
     {{ include('topics/_form.html.twig') }}
 
-    <a href="{{ path('topics_index') }}">back to list</a>
+    <a href="{{ path('topics_index') }}">🠐 Retour à la liste des topics</a>
 {% endblock %}
