--- a/templates/topics/show.html.twig
+++ b/templates/topics/show.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Topics{% endblock %}
 
 {% block body %}
+{% include 'main/header.html.twig' %}
     <h1>Topics</h1>
 
     <table class="table">
