--- a/templates/topics/_form.html.twig
+++ b/templates/topics/_form.html.twig
@@ -1,4 +1,10 @@
 {{ form_start(form) }}
     {{ form_widget(form) }}
-    <button class="btn btn-primary">{{ button_label|default('Publier') }}</button>
+    <div class="row">
+        <div class="col-12 d-flex justify-content-between align-items-center">
+            <a href="{{ path('topics_index') }}">🠐 Retour à la liste des topics</a>
+            <button class="btn btn-primary">{{ button_label|default('Publier') }}</button>
+        </div>
+    </div>
+    
 {{ form_end(form) }}
