--- a/templates/users/edit.html.twig
+++ b/templates/users/edit.html.twig
@@ -7,9 +7,12 @@
 
 <div class="container">
 
-    <div class="row mt-4">
-        <div class="col-12">
-            <h1>Modification de {{ app.user.pseudo }}</h1>
+    <div class="row mt-4 justify-content-center">
+        <div class="col-12 text-center">
+            <h1>Modification de votre compte "{{ app.user.pseudo }}"</h1>
+        </div>
+
+        <div class="col-12 col-md-10 col-lg-8 col-xxl-6 mt-4">
             {{ form(form) }}
         </div>
     </div>
