--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -12017,9 +12017,30 @@ body a:hover, body a:focus {
   color: #6C63FF;
 }
 
-/* Form create */
-#create-btn {
-  display: block;
-  margin: 0 0 0 auto;
+/* Topic box */
+.topic-box {
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+          box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  width: 100%;
+  height: 100%;
+}
+
+.topic-box .topic-id {
+  color: #E1E1E1;
+}
+
+.topic-box .topic-id::before {
+  content: "0";
+}
+
+.topic-box .posted-by {
+  color: #818181;
+  font-size: 0.92rem;
+}
+
+.topic-box .topic-text {
+  font-size: 1.12rem;
 }
 /*# sourceMappingURL=style.css.map */
