--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -5,21 +5,69 @@
 {% block body %}
 {% include 'main/header.html.twig' %}
 
-
 <div class="container">
 
     <div class="row mt-4">
         <div class="col-12">
-            <h1>Dashboard</h1>
+            <h1 class="text-uppercase">Dashboard</h1>
             <h2 class="h5 violet">Les derniers topics</h2>
         </div>
     </div>
 
     <div class="row">
-        {% include 'topics/index.html.twig' %}
-    </div>
-    
+        <div class="col-12 col-md-10">
+            {% for topic in topicsRecent %}
+                    <div class="row px-3 my-4">
+                        <div class="topic-box">
+                            <div class="pt-2 px-3 d-inline-flex align-items-center"><span class="topic-id">{{ topic.id }}</span><span class="pl-2 topic-title h3 blue">{{ topic.title }}</span></div>
+                            <div class="col-12 font-italic posted-by"><span>Posté par {{ topic.users.pseudo }}</span> <span>Le {{ topic.date ? topic.date|date('d/m/Y') : '' }} à {{ topic.date ? topic.date|date('H:i') : '' }}</span></div>
+                            <div class="col-12 pt-1 topic-text">
+                                {{ topic.text }}
+                            </div>
+                            <div class="row align-items-center">
 
+                            
+                            <div class="col-5 pt-4 ml-3 mt-3 mb-2">
+                                <!-- Likes -->
+                                <a href="{{ path('topics_like', {'id': topic.id}) }}" class="js-like d-inline-flex pr-4">
+                                    {% if topic.likeBy(app.user) %}
+                                        <span class="material-icons like">thumb_up</span>
+                                    {% else %}
+                                        <span class="material-icons like">thumb_up_off_alt</span>
+                                    {% endif %}
+                                    <span class="pl-2 pr-1 js-likes">{{topic.likes | length}}</span>
+                                    <span>like{% if topic.likes |length > 1 %}s{% endif %}</span>
+                                </a>
+                                
+                                <!-- Dislikes -->
+                                <a href="{{ path('topics_dislike', {'id': topic.id}) }}" class="js-dislike d-inline-flex">
+                                    {% if topic.dislikeBy(app.user) %}
+                                        <span class="material-icons dislike">thumb_down</span>
+                                    {% else %}
+                                        <span class="material-icons dislike">thumb_down_off_alt</span>
+                                    {% endif %}
+                                    <span class="pl-2 pr-1 js-dislikes">{{topic.dislikes | length}}</span>
+                                    <span>dislike{% if topic.dislikes |length > 1 %}s{% endif %}</span>
+                                </a>
+
+                            </div>
+
+                            <!-- CTA -->
+                            <div class="col-6 ml-auto text-right pr-4 mr-2">
+                                <a class="btn btn-sm btn-primary mr-2" href="{{ path('topics_show', {'id': topic.id}) }}">Voir</a>
+                            {% if is_granted('ROLE_ADMIN') or ((topic.users == app.user) and (editLimit[topic.id] == 1)) %}
+                                <a href="{{ path('topics_edit', {'id': topic.id}) }}" >Modifier</a>
+                            {% endif %}
+                            </div>
+                        </div>
+                    </div>
+                    </div>
+                {% else %}
+                    <br>
+                        <div class="warning">Pas d'entrée trouvée</div>
+                {% endfor %}
+        </div>
+    </div>
 </div>
 
 {% endblock %}
