--- a/templates/topics/edit.html.twig
+++ b/templates/topics/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Topics{% endblock %}
+{% block title %}Éditer Topics{% endblock %}
 
 {% block body %}
 {% include 'main/header.html.twig' %}
