--- a/public/assets/scss/style.scss
+++ b/public/assets/scss/style.scss
@@ -130,11 +130,40 @@ body {
               content: "0";
           }
       }
+      .topic-title {
+          line-height: 1px;
+      }
       .posted-by {
+        position: relative;
         color: $gray;
-        font-size: 0.92rem; 
+        font-size: 0.71rem;
+        top: 0; 
       }
       .topic-text {
           font-size: 1.12rem;
       }
+  }
+
+  .topic-text-show {
+      position: relative;
+      z-index: 0;
+      &::before {
+          font-family: "Material Icons";
+          content: "format_quote";
+          display: block;
+          position: absolute;
+          top: -15px;
+          left: -18px;
+          color: $light-gray;
+          font-size: 3rem;
+          z-index: -1;
+      }
+  }
+
+  .metas {
+    position: relative;
+    color: $gray;
+    display: block;
+    font-size: 0.71rem;
+    margin-top: -8px; 
   }
