--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -18,9 +18,11 @@
         <div class="col-12 col-md-10">
             {% for topic in topicsRecent %}
                     <div class="row px-3 my-4">
-                        <div class="topic-box">
-                            <div class="pt-2 px-3 d-inline-flex align-items-center"><span class="topic-id">{{ topic.id }}</span><span class="pl-2 topic-title h3 blue">{{ topic.title }}</span></div>
-                            <div class="col-12 font-italic posted-by"><span>Posté par {{ topic.users.pseudo }}</span> <span>Le {{ topic.date ? topic.date|date('d/m/Y') : '' }} à {{ topic.date ? topic.date|date('H:i') : '' }}</span></div>
+                        <div class="topic-box card">
+                            <div class="topic-title card-header pt-3 px-3 d-flex align-items-center justify-content-between"><span class="h5 violet">{{ topic.title }}</span>
+                                <div class="font-italic posted-by"><span>Posté par {{ topic.users.pseudo }}</span> <span>Le {{ topic.date ? topic.date|date('d/m/Y') : '' }} à {{ topic.date ? topic.date|date('H:i') : '' }}</span><span class="topic-id pl-4">{{ topic.id }}</span></div>
+                            </div>
+                            
                             <div class="col-12 pt-1 topic-text">
                                 {{ topic.text }}
                             </div>
@@ -53,7 +55,7 @@
                             </div>
 
                             <!-- CTA -->
-                            <div class="col-6 ml-auto text-right pr-4 mr-2">
+                            <div class="ml-auto text-right pr-4 mr-2">
                                 <a class="btn btn-sm btn-primary mr-2" href="{{ path('topics_show', {'id': topic.id}) }}">Voir</a>
                             {% if is_granted('ROLE_ADMIN') or ((topic.users == app.user) and (editLimit[topic.id] == 1)) %}
                                 <a href="{{ path('topics_edit', {'id': topic.id}) }}" >Modifier</a>
