--- a/templates/topics/show.html.twig
+++ b/templates/topics/show.html.twig
@@ -9,96 +9,79 @@
     <div class="row my-4 justify-content-center">
         <div class="col-12">
             <h1 class="text-uppercase">Ce topic</h1>
-            <h2 class="h5 violet">{{ topic.title }} - <span class="text-italic gray">Posté par {{ topic.users.pseudo }}</span></h2>
-            <h3 class="h6"></h3>
+            <h2 class="h5 violet">{{ topic.title }} - <span class="text-italic">Posté par {{ topic.users.pseudo }}</span></h2>
+            <span class="metas">Le {{ topic.date ? topic.date|date('d/m/Y') : '' }} à {{ topic.date ? topic.date|date('H:i') : '' }}</span>
         </div>
 
         <!-- The content -->
-        <div class="col-12 pt-3">
+        <div class="col-12 pt-3 topic-text-show">
+            {{ topic.text }}
+        </div>
 
+        <div class="col-12 mt-5 mb-3 card-footer d-flex align-items-center">
+            <!-- Likes -->
+            <a href="{{ path('topics_like', {'id': topic.id}) }}" class="js-like d-inline-flex pr-4">
+                {% if topic.likeBy(app.user) %}
+                    <span class="material-icons like">thumb_up</span>
+                {% else %}
+                    <span class="material-icons like">thumb_up_off_alt</span>
+                {% endif %}
+                <span class="pl-2 pr-1 js-likes">{{topic.likes | length}}</span>
+                <span>like{% if topic.likes |length > 1 %}s{% endif %}</span>
+            </a>
+            
+            <!-- Dislikes -->
+            <a href="{{ path('topics_dislike', {'id': topic.id}) }}" class="js-dislike d-inline-flex">
+                {% if topic.dislikeBy(app.user) %}
+                    <span class="material-icons dislike">thumb_down</span>
+                {% else %}
+                    <span class="material-icons dislike">thumb_down_off_alt</span>
+                {% endif %}
+                <span class="pl-2 pr-1 js-dislikes">{{topic.dislikes | length}}</span>
+                <span>dislike{% if topic.dislikes |length > 1 %}s{% endif %}</span>
+            </a>
+
+            <a class="d-flex ml-auto mr-3 p-1" href="{{ path('commentaires_new', {'id': topic.id}) }}"><i class="material-icons pr-1">add</i>Ajouter un commentaire</a>
+            <a class="d-flex mr-3 p-1" href="{{ path('topics_edit', {'id': topic.id}) }}"><i class="material-icons pr-1">edit</i>Éditer</a>
+            <a class="d-flex text-danger p-1" href="{{ path('reports_new', {'id': topic.id}) }}" class="danger"><i class="material-icons pr-1">report</i>Signaler</a>
+        </div>
+
+        <div class="col-12 d-flex justify-content-between">
+            <a href="{{ path('topics_index') }}">🠐 Retour à la liste des topics</a>
+            {{ include('topics/_delete_form.html.twig') }}
         </div>
 
 
-        <div class="col-12 col-md-8 col-lg-10 col-xxl-6">
-            <div class="row">
-                <div class="topic-box">
-                    <div class="pt-2 px-3 d-inline-flex align-items-center"><span class="topic-id">{{ topic.id }}</span><span class="pl-2 topic-title h3 blue">{{ topic.title }}</span></div>
-                    <div class="col-12 font-italic posted-by"><span></span> <span>Le {{ topic.date ? topic.date|date('d/m/Y') : '' }} à {{ topic.date ? topic.date|date('H:i') : '' }}</span></div>
-                    <div class="col-12 pt-1 topic-text">
-                        {{ topic.text }}
-                    </div>
-                    <div class="row align-items-center">
-
-                    
-                    <div class="col-5 pt-4 ml-3 mt-3 mb-2">
-                        <!-- Likes -->
-                        <a href="{{ path('topics_like', {'id': topic.id}) }}" class="js-like d-inline-flex pr-4">
-                            {% if topic.likeBy(app.user) %}
-                                <span class="material-icons like">thumb_up</span>
-                            {% else %}
-                                <span class="material-icons like">thumb_up_off_alt</span>
-                            {% endif %}
-                            <span class="pl-2 pr-1 js-likes">{{topic.likes | length}}</span>
-                            <span>like{% if topic.likes |length > 1 %}s{% endif %}</span>
-                        </a>
                         
-                        <!-- Dislikes -->
-                        <a href="{{ path('topics_dislike', {'id': topic.id}) }}" class="js-dislike d-inline-flex">
-                            {% if topic.dislikeBy(app.user) %}
-                                <span class="material-icons dislike">thumb_down</span>
-                            {% else %}
-                                <span class="material-icons dislike">thumb_down_off_alt</span>
-                            {% endif %}
-                            <span class="pl-2 pr-1 js-dislikes">{{topic.dislikes | length}}</span>
-                            <span>dislike{% if topic.dislikes |length > 1 %}s{% endif %}</span>
-                        </a>
-
-                    </div>
-                </div>
-            </div>
-            </div>
-            </div>
-                <tbody>
-                    <tr>
-                        <th>Id</th>
-                        <td>{{ topic.id }}</td>
-                    </tr>
-                    <tr>
-                        <th>Title</th>
-                        <td>{{ topic.title }}</td>
-                    </tr>
-                    <tr>
-                        <th>Text</th>
-                        <td>{{ topic.text }}</td>
-                    </tr>
-                    <tr>
-                        <th>Créateur</th>
-                        <td>{{ topic.users.pseudo }}</td>
-                    </tr>
-                    <tr>
-                        <th>Date</th>
-                        <td>{{ topic.date ? topic.date|date('Y-m-d H:i:s') : '' }}</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+         
     </div>
+
+    {% for commentaire in topic.commentaires %}
+    <div class="row mt-5">
+        <div class="col-12">
+            <h2 class="h3">Les commentaires</h2>
+        </div>
+        
+        
+        <div class="col-12 mt-3 d-flex align-items-center">
+            <h4 class="violet">{{ commentaire.user.pseudo }}</h4>
+            <div class="metas mt-1">
+                <span class="pl-3">{{ commentaire.date ? commentaire.date|date('Y/m/d') : '' }}</span> à 
+                <span>{{ commentaire.date ? commentaire.date|date('H:i') : '' }}</span> 
+            </div>
+            
+        </div>
+
+        <div class="col-12 topic-text-show">
+            {{ commentaire.text }} 
+        </div>
+        
+    </div>
+    {% endfor %}
 </div>
     
+    
+   
 
     
-    {% for commentaire in topic.commentaires %}
-        {{ commentaire.text }} {{ commentaire.user.pseudo }} {{ commentaire.date ? commentaire.date|date('H:i Y-m-d') : '' }}
-        <br>
-    {% endfor %}
-    
-    <a href="{{ path('topics_index') }}">back to list</a>
-    <br>
-    <a href="{{ path('topics_edit', {'id': topic.id}) }}">edit</a>
-    <br>
-    <a href="{{ path('commentaires_new', {'id': topic.id}) }}">Ajouter Commentaire</a>
-    <br>
-    <a href="{{ path('reports_new', {'id': topic.id}) }}" class="danger">Signaler</a>
-
-    {{ include('topics/_delete_form.html.twig') }}
 {% endblock %}
